<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChangePasswordFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chng_passwd_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chngPwdLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/nunito"
            android:text="@string/chng_password"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/old_passwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/nunito"
            android:text="@string/old_password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chngPwdLbl" />

        <EditText
            android:id="@+id/old_passwd_textfield"
            android:layout_width="314dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/old_passwd_textview"
            app:layout_constraintTop_toBottomOf="@+id/old_passwd_textview" />

        <TextView
            android:id="@+id/new_passwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito"
            android:text="@string/new_password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_passwd_textfield" />

        <EditText
            android:id="@+id/new_passwd_textfield"
            android:layout_width="314dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/new_passwd_textview"
            app:layout_constraintTop_toBottomOf="@+id/new_passwd_textview" />

        <TextView
            android:id="@+id/confirm_passwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito"
            android:text="@string/confirm_password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_passwd_textfield" />

        <EditText
            android:id="@+id/confirm_passwd_textfield"
            android:layout_width="314dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/confirm_passwd_textview"
            app:layout_constraintTop_toBottomOf="@+id/confirm_passwd_textview" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:text="Update Password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_passwd_textfield"
            app:layout_constraintVertical_bias="0.482" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>